--- a/MakeupTestingTests/Report/MakeupTestingTests.CartTests 03-04-2024_(16_06_24)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.CartTests 03-04-2024_(16_06_24)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">04/02/2024 10:41:58 PM</span>
+                    <span class="badge badge-primary">04/03/2024 4:06:24 PM</span>
                 </a>
             </li>
         </ul>
@@ -121,19 +121,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">ChangePageLanguage</p> 
-													<p class="duration text-sm">0h:0m:11s+835ms</p> 
-													<span class="datetime">22:41:58 PM</span>
+													<p class="name">CalculateTotalProductPriceInOrder</p> 
+													<p class="duration text-sm">0h:0m:21s+630ms</p> 
+													<span class="datetime">16:06:24 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">ChangePageLanguage</h5>
-															<span class='badge badge-success'>04/02/2024 10:41:58 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:42:10 PM</span>
-															<span class='badge badge-default'>0h:0m:11s+835ms</span>
+															<h5 class="test-status text-pass">CalculateTotalProductPriceInOrder</h5>
+															<span class='badge badge-success'>04/03/2024 4:06:24 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:06:46 PM</span>
+															<span class='badge badge-default'>0h:0m:21s+630ms</span>
 														</div>
 																											</div>
 												</div>
@@ -148,7 +148,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:42:10</td>
+				<td>16:06:46</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -166,19 +166,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">CheckDisplayOfTooltip</p> 
-													<p class="duration text-sm">0h:0m:7s+867ms</p> 
-													<span class="datetime">22:42:10 PM</span>
+													<p class="name">VerifyAddProductToCart</p> 
+													<p class="duration text-sm">0h:0m:14s+462ms</p> 
+													<span class="datetime">16:06:46 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">CheckDisplayOfTooltip</h5>
-															<span class='badge badge-success'>04/02/2024 10:42:10 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:42:18 PM</span>
-															<span class='badge badge-default'>0h:0m:7s+867ms</span>
+															<h5 class="test-status text-pass">VerifyAddProductToCart</h5>
+															<span class='badge badge-success'>04/03/2024 4:06:46 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:07:00 PM</span>
+															<span class='badge badge-default'>0h:0m:14s+462ms</span>
 														</div>
 																											</div>
 												</div>
@@ -193,7 +193,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:42:18</td>
+				<td>16:07:00</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -211,19 +211,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">NavigateToBeautyClub</p> 
-													<p class="duration text-sm">0h:0m:36s+249ms</p> 
-													<span class="datetime">22:42:19 PM</span>
+													<p class="name">VerifyDecreaseQuantityProductInOrder</p> 
+													<p class="duration text-sm">0h:0m:14s+101ms</p> 
+													<span class="datetime">16:07:01 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">NavigateToBeautyClub</h5>
-															<span class='badge badge-success'>04/02/2024 10:42:19 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:42:55 PM</span>
-															<span class='badge badge-default'>0h:0m:36s+249ms</span>
+															<h5 class="test-status text-pass">VerifyDecreaseQuantityProductInOrder</h5>
+															<span class='badge badge-success'>04/03/2024 4:07:01 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:07:15 PM</span>
+															<span class='badge badge-default'>0h:0m:14s+101ms</span>
 														</div>
 																											</div>
 												</div>
@@ -238,7 +238,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:42:55</td>
+				<td>16:07:15</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -256,19 +256,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">NavigateToYouTube</p> 
-													<p class="duration text-sm">0h:0m:15s+453ms</p> 
-													<span class="datetime">22:42:55 PM</span>
+													<p class="name">VerifyDeleteProductFromCart</p> 
+													<p class="duration text-sm">0h:0m:15s+487ms</p> 
+													<span class="datetime">16:07:15 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">NavigateToYouTube</h5>
-															<span class='badge badge-success'>04/02/2024 10:42:55 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:43:11 PM</span>
-															<span class='badge badge-default'>0h:0m:15s+453ms</span>
+															<h5 class="test-status text-pass">VerifyDeleteProductFromCart</h5>
+															<span class='badge badge-success'>04/03/2024 4:07:15 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:07:30 PM</span>
+															<span class='badge badge-default'>0h:0m:15s+487ms</span>
 														</div>
 																											</div>
 												</div>
@@ -283,7 +283,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:43:11</td>
+				<td>16:07:30</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -301,19 +301,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">SelectDeliveryVariantByCity</p> 
-													<p class="duration text-sm">0h:0m:11s+325ms</p> 
-													<span class="datetime">22:43:11 PM</span>
+													<p class="name">VerifyIncreaseQuantityProductInOrder</p> 
+													<p class="duration text-sm">0h:0m:14s+253ms</p> 
+													<span class="datetime">16:07:31 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">SelectDeliveryVariantByCity</h5>
-															<span class='badge badge-success'>04/02/2024 10:43:11 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:43:22 PM</span>
-															<span class='badge badge-default'>0h:0m:11s+325ms</span>
+															<h5 class="test-status text-pass">VerifyIncreaseQuantityProductInOrder</h5>
+															<span class='badge badge-success'>04/03/2024 4:07:31 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:07:45 PM</span>
+															<span class='badge badge-default'>0h:0m:14s+253ms</span>
 														</div>
 																											</div>
 												</div>
@@ -328,7 +328,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:43:22</td>
+				<td>16:07:45</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -346,19 +346,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">SelectSubCategory</p> 
-													<p class="duration text-sm">0h:0m:10s+893ms</p> 
-													<span class="datetime">22:43:23 PM</span>
+													<p class="name">VerifyPossibilityOfPostponingOrder</p> 
+													<p class="duration text-sm">0h:0m:17s+839ms</p> 
+													<span class="datetime">16:07:45 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">SelectSubCategory</h5>
-															<span class='badge badge-success'>04/02/2024 10:43:23 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:43:34 PM</span>
-															<span class='badge badge-default'>0h:0m:10s+893ms</span>
+															<h5 class="test-status text-pass">VerifyPossibilityOfPostponingOrder</h5>
+															<span class='badge badge-success'>04/03/2024 4:07:45 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:08:03 PM</span>
+															<span class='badge badge-default'>0h:0m:17s+839ms</span>
 														</div>
 																											</div>
 												</div>
@@ -373,97 +373,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:43:34</td>
-				<td>
-Test ended with Pass, 
-<br>
-<br>									</td>
-			</tr>
-	</tbody>
-</table>
-
-</div>    
-											</div>
-										</li>
-										<li class="test-item" status="pass" author="" device="" tag=""> 
-											<div class="status-avatar pass-bg">
-												<i class="fa fa-check text-white"></i>
-											</div>
-											<div class="open-test">
-												<div class="test-detail"> 
-													<p class="name">VerifyScrollUpButton</p> 
-													<p class="duration text-sm">0h:0m:8s+489ms</p> 
-													<span class="datetime">22:43:34 PM</span>
-												</div>
-											</div>
-											<div class="test-contents d-none">
-												<div class="detail-head">
-													<div class="p-v-10 d-inline-block">	
-														<div class="info">
-															<h5 class="test-status text-pass">VerifyScrollUpButton</h5>
-															<span class='badge badge-success'>04/02/2024 10:43:34 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:43:42 PM</span>
-															<span class='badge badge-default'>0h:0m:8s+489ms</span>
-														</div>
-																											</div>
-												</div>
-<div class="detail-body mt-4">												
-	
-<table class="table table-sm">
-	<thead><tr>
-		<th class="status-col">Status</th>
-		<th class="timestamp-col">Timestamp</th>
-		<th class="details-col">Details</th>
-	</tr></thead>
-	<tbody>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:43:42</td>
-				<td>
-Test ended with Pass, 
-<br>
-<br>									</td>
-			</tr>
-	</tbody>
-</table>
-
-</div>    
-											</div>
-										</li>
-										<li class="test-item" status="pass" author="" device="" tag=""> 
-											<div class="status-avatar pass-bg">
-												<i class="fa fa-check text-white"></i>
-											</div>
-											<div class="open-test">
-												<div class="test-detail"> 
-													<p class="name">VerifySubscriptionErrorDisplay</p> 
-													<p class="duration text-sm">0h:0m:8s+622ms</p> 
-													<span class="datetime">22:43:43 PM</span>
-												</div>
-											</div>
-											<div class="test-contents d-none">
-												<div class="detail-head">
-													<div class="p-v-10 d-inline-block">	
-														<div class="info">
-															<h5 class="test-status text-pass">VerifySubscriptionErrorDisplay</h5>
-															<span class='badge badge-success'>04/02/2024 10:43:43 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:43:52 PM</span>
-															<span class='badge badge-default'>0h:0m:8s+622ms</span>
-														</div>
-																											</div>
-												</div>
-<div class="detail-body mt-4">												
-	
-<table class="table table-sm">
-	<thead><tr>
-		<th class="status-col">Status</th>
-		<th class="timestamp-col">Timestamp</th>
-		<th class="details-col">Details</th>
-	</tr></thead>
-	<tbody>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:43:52</td>
+				<td>16:08:03</td>
 				<td>
 Test ended with Pass, 
 <br>
