--- a/MakeupTestingTests/Report/MakeupTestingTests.MainPageTests 03-04-2024_(16_09_55)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.MainPageTests 03-04-2024_(16_09_55)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">04/02/2024 10:44:09 PM</span>
+                    <span class="badge badge-primary">04/03/2024 4:09:55 PM</span>
                 </a>
             </li>
         </ul>
@@ -107,7 +107,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -121,19 +121,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyFollowLinkBreadCrumbs</p> 
-													<p class="duration text-sm">0h:0m:16s+535ms</p> 
-													<span class="datetime">22:44:09 PM</span>
+													<p class="name">ChangePageLanguage</p> 
+													<p class="duration text-sm">0h:0m:9s+035ms</p> 
+													<span class="datetime">16:09:55 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyFollowLinkBreadCrumbs</h5>
-															<span class='badge badge-success'>04/02/2024 10:44:09 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:44:26 PM</span>
-															<span class='badge badge-default'>0h:0m:16s+535ms</span>
+															<h5 class="test-status text-pass">ChangePageLanguage</h5>
+															<span class='badge badge-success'>04/03/2024 4:09:55 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:10:04 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+035ms</span>
 														</div>
 																											</div>
 												</div>
@@ -148,7 +148,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:44:26</td>
+				<td>16:10:04</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -166,19 +166,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputProductNameInSearch</p> 
-													<p class="duration text-sm">0h:0m:13s+022ms</p> 
-													<span class="datetime">22:44:26 PM</span>
+													<p class="name">CheckDisplayOfTooltip</p> 
+													<p class="duration text-sm">0h:0m:7s+098ms</p> 
+													<span class="datetime">16:10:04 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputProductNameInSearch</h5>
-															<span class='badge badge-success'>04/02/2024 10:44:26 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:44:39 PM</span>
-															<span class='badge badge-default'>0h:0m:13s+022ms</span>
+															<h5 class="test-status text-pass">CheckDisplayOfTooltip</h5>
+															<span class='badge badge-success'>04/03/2024 4:10:04 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:10:11 PM</span>
+															<span class='badge badge-default'>0h:0m:7s+098ms</span>
 														</div>
 																											</div>
 												</div>
@@ -193,7 +193,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:44:39</td>
+				<td>16:10:11</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -211,19 +211,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputSpaceInSearch</p> 
-													<p class="duration text-sm">0h:0m:9s+219ms</p> 
-													<span class="datetime">22:44:39 PM</span>
+													<p class="name">NavigateToBeautyClub</p> 
+													<p class="duration text-sm">0h:0m:14s+158ms</p> 
+													<span class="datetime">16:10:11 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputSpaceInSearch</h5>
-															<span class='badge badge-success'>04/02/2024 10:44:39 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:44:49 PM</span>
-															<span class='badge badge-default'>0h:0m:9s+219ms</span>
+															<h5 class="test-status text-pass">NavigateToBeautyClub</h5>
+															<span class='badge badge-success'>04/03/2024 4:10:11 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:10:25 PM</span>
+															<span class='badge badge-default'>0h:0m:14s+158ms</span>
 														</div>
 																											</div>
 												</div>
@@ -238,7 +238,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:44:49</td>
+				<td>16:10:25</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -256,19 +256,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputSpecialCharactersInSearchField</p> 
-													<p class="duration text-sm">0h:0m:11s+578ms</p> 
-													<span class="datetime">22:44:49 PM</span>
+													<p class="name">NavigateToYouTube</p> 
+													<p class="duration text-sm">0h:0m:11s+991ms</p> 
+													<span class="datetime">16:10:26 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputSpecialCharactersInSearchField</h5>
-															<span class='badge badge-success'>04/02/2024 10:44:49 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:45:01 PM</span>
-															<span class='badge badge-default'>0h:0m:11s+578ms</span>
+															<h5 class="test-status text-pass">NavigateToYouTube</h5>
+															<span class='badge badge-success'>04/03/2024 4:10:26 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:10:38 PM</span>
+															<span class='badge badge-default'>0h:0m:11s+991ms</span>
 														</div>
 																											</div>
 												</div>
@@ -283,7 +283,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:45:01</td>
+				<td>16:10:38</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -301,19 +301,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifySearchResultOnFirstPage</p> 
-													<p class="duration text-sm">0h:0m:13s+338ms</p> 
-													<span class="datetime">22:45:01 PM</span>
+													<p class="name">SelectDeliveryVariantByCity</p> 
+													<p class="duration text-sm">0h:0m:9s+430ms</p> 
+													<span class="datetime">16:10:38 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifySearchResultOnFirstPage</h5>
-															<span class='badge badge-success'>04/02/2024 10:45:01 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:45:14 PM</span>
-															<span class='badge badge-default'>0h:0m:13s+338ms</span>
+															<h5 class="test-status text-pass">SelectDeliveryVariantByCity</h5>
+															<span class='badge badge-success'>04/03/2024 4:10:38 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:10:47 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+430ms</span>
 														</div>
 																											</div>
 												</div>
@@ -328,7 +328,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>22:45:14</td>
+				<td>16:10:47</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -340,25 +340,25 @@ Test ended with Pass,
 </div>    
 											</div>
 										</li>
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifySearchResultOnLastPage</p> 
-													<p class="duration text-sm">0h:0m:18s+615ms</p> 
-													<span class="datetime">22:45:15 PM</span>
+													<p class="name">SelectSubCategory</p> 
+													<p class="duration text-sm">0h:0m:9s+387ms</p> 
+													<span class="datetime">16:10:47 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-fail">VerifySearchResultOnLastPage</h5>
-															<span class='badge badge-success'>04/02/2024 10:45:15 PM</span>
-															<span class='badge badge-danger'>04/02/2024 10:45:33 PM</span>
-															<span class='badge badge-default'>0h:0m:18s+615ms</span>
+															<h5 class="test-status text-pass">SelectSubCategory</h5>
+															<span class='badge badge-success'>04/03/2024 4:10:47 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:10:57 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+387ms</span>
 														</div>
 																											</div>
 												</div>
@@ -372,19 +372,101 @@ Test ended with Pass,
 	</tr></thead>
 	<tbody>
 			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>22:45:33</td>
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>16:10:57</td>
 				<td>
-Test ended with Fail, 
-<br>   at NUnit.Framework.Legacy.StringAssert.Contains(String expected, String actual, String message, Object[] args)
-   at MakeupTestingTests.SearchResultTests.VerifySearchResultOnLastPage() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTestingTests\SearchResultTests.cs:line 88
-
+Test ended with Pass, 
 <br>
-<br>  The product name is missing in the title Набор "Адвент-календарь", 24 продукта - Avon 24-Day Beauty Advent Calendar
-Assert.That(actual, Does.Contain(expected))
-  Expected: String containing "крем"
-  But was:  "набор "адвент-календарь", 24 продукта - avon 24-day beauty advent calendar"
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
 
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifyScrollUpButton</p> 
+													<p class="duration text-sm">0h:0m:7s+263ms</p> 
+													<span class="datetime">16:10:57 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-pass">VerifyScrollUpButton</h5>
+															<span class='badge badge-success'>04/03/2024 4:10:57 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:11:04 PM</span>
+															<span class='badge badge-default'>0h:0m:7s+263ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>16:11:04</td>
+				<td>
+Test ended with Pass, 
+<br>
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifySubscriptionErrorDisplay</p> 
+													<p class="duration text-sm">0h:0m:7s+696ms</p> 
+													<span class="datetime">16:11:04 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-pass">VerifySubscriptionErrorDisplay</h5>
+															<span class='badge badge-success'>04/03/2024 4:11:04 PM</span>
+															<span class='badge badge-danger'>04/03/2024 4:11:12 PM</span>
+															<span class='badge badge-default'>0h:0m:7s+696ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>16:11:12</td>
+				<td>
+Test ended with Pass, 
+<br>
 <br>									</td>
 			</tr>
 	</tbody>
