--- a/MakeupTestingTests/Report/MakeupTestingTests.CartTests 01-09-2024_(18_55_10)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.CartTests 01-09-2024_(18_55_10)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">05/22/2024 7:08:13 PM</span>
+                    <span class="badge badge-primary">09/01/2024 6:55:10 PM</span>
                 </a>
             </li>
         </ul>
@@ -121,19 +121,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyFollowLinkBreadCrumbs</p> 
-													<p class="duration text-sm">0h:0m:11s+475ms</p> 
-													<span class="datetime">19:08:13 PM</span>
+													<p class="name">CalculateTotalProductPriceInOrder</p> 
+													<p class="duration text-sm">0h:0m:16s+201ms</p> 
+													<span class="datetime">18:55:10 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyFollowLinkBreadCrumbs</h5>
-															<span class='badge badge-success'>05/22/2024 7:08:13 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:08:24 PM</span>
-															<span class='badge badge-default'>0h:0m:11s+475ms</span>
+															<h5 class="test-status text-pass">CalculateTotalProductPriceInOrder</h5>
+															<span class='badge badge-success'>09/01/2024 6:55:10 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:55:26 PM</span>
+															<span class='badge badge-default'>0h:0m:16s+201ms</span>
 														</div>
 																											</div>
 												</div>
@@ -148,7 +148,7 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:08:24</td>
+				<td>18:55:26</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -166,19 +166,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputProductNameInSearch</p> 
-													<p class="duration text-sm">0h:0m:11s+224ms</p> 
-													<span class="datetime">19:08:24 PM</span>
+													<p class="name">VerifyAddProductToCart</p> 
+													<p class="duration text-sm">0h:0m:11s+380ms</p> 
+													<span class="datetime">18:55:26 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputProductNameInSearch</h5>
-															<span class='badge badge-success'>05/22/2024 7:08:24 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:08:36 PM</span>
-															<span class='badge badge-default'>0h:0m:11s+224ms</span>
+															<h5 class="test-status text-pass">VerifyAddProductToCart</h5>
+															<span class='badge badge-success'>09/01/2024 6:55:26 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:55:38 PM</span>
+															<span class='badge badge-default'>0h:0m:11s+380ms</span>
 														</div>
 																											</div>
 												</div>
@@ -193,7 +193,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:08:36</td>
+				<td>18:55:38</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -211,19 +211,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputSpaceInSearch</p> 
-													<p class="duration text-sm">0h:0m:8s+088ms</p> 
-													<span class="datetime">19:08:36 PM</span>
+													<p class="name">VerifyDecreaseQuantityProductInOrder</p> 
+													<p class="duration text-sm">0h:0m:14s+097ms</p> 
+													<span class="datetime">18:55:38 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputSpaceInSearch</h5>
-															<span class='badge badge-success'>05/22/2024 7:08:36 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:08:44 PM</span>
-															<span class='badge badge-default'>0h:0m:8s+088ms</span>
+															<h5 class="test-status text-pass">VerifyDecreaseQuantityProductInOrder</h5>
+															<span class='badge badge-success'>09/01/2024 6:55:38 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:55:52 PM</span>
+															<span class='badge badge-default'>0h:0m:14s+097ms</span>
 														</div>
 																											</div>
 												</div>
@@ -238,7 +238,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:08:44</td>
+				<td>18:55:52</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -256,19 +256,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyInputSpecialCharactersInSearchField</p> 
-													<p class="duration text-sm">0h:0m:10s+076ms</p> 
-													<span class="datetime">19:08:44 PM</span>
+													<p class="name">VerifyDeleteProductFromCart</p> 
+													<p class="duration text-sm">0h:0m:13s+030ms</p> 
+													<span class="datetime">18:55:52 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyInputSpecialCharactersInSearchField</h5>
-															<span class='badge badge-success'>05/22/2024 7:08:44 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:08:54 PM</span>
-															<span class='badge badge-default'>0h:0m:10s+076ms</span>
+															<h5 class="test-status text-pass">VerifyDeleteProductFromCart</h5>
+															<span class='badge badge-success'>09/01/2024 6:55:52 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:56:05 PM</span>
+															<span class='badge badge-default'>0h:0m:13s+030ms</span>
 														</div>
 																											</div>
 												</div>
@@ -283,7 +283,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:08:54</td>
+				<td>18:56:05</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -301,19 +301,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifySearchResultOnFirstPage</p> 
-													<p class="duration text-sm">0h:0m:10s+908ms</p> 
-													<span class="datetime">19:08:54 PM</span>
+													<p class="name">VerifyIncreaseQuantityProductInOrder</p> 
+													<p class="duration text-sm">0h:0m:13s+294ms</p> 
+													<span class="datetime">18:56:05 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifySearchResultOnFirstPage</h5>
-															<span class='badge badge-success'>05/22/2024 7:08:54 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:09:05 PM</span>
-															<span class='badge badge-default'>0h:0m:10s+908ms</span>
+															<h5 class="test-status text-pass">VerifyIncreaseQuantityProductInOrder</h5>
+															<span class='badge badge-success'>09/01/2024 6:56:05 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:56:19 PM</span>
+															<span class='badge badge-default'>0h:0m:13s+294ms</span>
 														</div>
 																											</div>
 												</div>
@@ -328,7 +328,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:09:05</td>
+				<td>18:56:19</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -346,19 +346,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifySearchResultOnLastPage</p> 
-													<p class="duration text-sm">0h:0m:13s+407ms</p> 
-													<span class="datetime">19:09:05 PM</span>
+													<p class="name">VerifyPossibilityOfPostponingOrder</p> 
+													<p class="duration text-sm">0h:0m:15s+068ms</p> 
+													<span class="datetime">18:56:19 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifySearchResultOnLastPage</h5>
-															<span class='badge badge-success'>05/22/2024 7:09:05 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:09:19 PM</span>
-															<span class='badge badge-default'>0h:0m:13s+407ms</span>
+															<h5 class="test-status text-pass">VerifyPossibilityOfPostponingOrder</h5>
+															<span class='badge badge-success'>09/01/2024 6:56:19 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:56:34 PM</span>
+															<span class='badge badge-default'>0h:0m:15s+068ms</span>
 														</div>
 																											</div>
 												</div>
@@ -373,7 +373,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:09:19</td>
+				<td>18:56:34</td>
 				<td>
 Test ended with Pass, 
 <br>
