--- a/MakeupTestingTests/Report/MakeupTestingTests.DecorativeCosmeticsTests 01-09-2024_(18_56_34)/index.html
+++ b/MakeupTestingTests/Report/MakeupTestingTests.DecorativeCosmeticsTests 01-09-2024_(18_56_34)/index.html
@@ -52,7 +52,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">05/22/2024 7:03:20 PM</span>
+                    <span class="badge badge-primary">09/01/2024 6:56:34 PM</span>
                 </a>
             </li>
         </ul>
@@ -107,7 +107,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -121,19 +121,19 @@
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">CalculateTotalProductPriceInOrder</p> 
-													<p class="duration text-sm">0h:0m:17s+266ms</p> 
-													<span class="datetime">19:03:20 PM</span>
+													<p class="name">SerializeTest</p> 
+													<p class="duration text-sm">0h:0m:10s+779ms</p> 
+													<span class="datetime">18:56:34 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">CalculateTotalProductPriceInOrder</h5>
-															<span class='badge badge-success'>05/22/2024 7:03:20 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:03:37 PM</span>
-															<span class='badge badge-default'>0h:0m:17s+266ms</span>
+															<h5 class="test-status text-pass">SerializeTest</h5>
+															<span class='badge badge-success'>09/01/2024 6:56:34 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:56:45 PM</span>
+															<span class='badge badge-default'>0h:0m:10s+779ms</span>
 														</div>
 																											</div>
 												</div>
@@ -148,7 +148,105 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:03:37</td>
+				<td>18:56:45</td>
+				<td>
+Test ended with Pass, 
+<br>
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="fail" author="" device="" tag=""> 
+											<div class="status-avatar fail-bg">
+												<i class="fa fa-times text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifyFilterProducts</p> 
+													<p class="duration text-sm">0h:0m:10s+845ms</p> 
+													<span class="datetime">18:56:45 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-fail">VerifyFilterProducts</h5>
+															<span class='badge badge-success'>09/01/2024 6:56:45 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:56:56 PM</span>
+															<span class='badge badge-default'>0h:0m:10s+845ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-times text-fail"></i></td>
+				<td>18:56:56</td>
+				<td>
+Test ended with Fail, 
+<br>   at NUnit.Framework.Legacy.StringAssert.Contains(String expected, String actual, String message, Object[] args)
+   at MakeupTestingTests.DecorativeCosmeticsTests.VerifyFilterProducts() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTestingTests\DecorativeCosmeticsTests.cs:line 42
+
+<br>
+<br>  The product type is missing in the title (Artdeco Hydra Lip Booster, Блеск для губ с эффектом увеличения - Artdeco Hydra Lip Booster)
+Assert.That(actual, Does.Contain(expected))
+  Expected: String containing "блиск для губ"
+  But was:  "блеск для губ с эффектом увеличения - artdeco hydra lip booster"
+
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifyFilterProductsByPrice</p> 
+													<p class="duration text-sm">0h:0m:11s+682ms</p> 
+													<span class="datetime">18:56:56 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-pass">VerifyFilterProductsByPrice</h5>
+															<span class='badge badge-success'>09/01/2024 6:56:56 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:57:08 PM</span>
+															<span class='badge badge-default'>0h:0m:11s+682ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>18:57:08</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -166,19 +264,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyAddProductToCart</p> 
-													<p class="duration text-sm">0h:0m:12s+160ms</p> 
-													<span class="datetime">19:03:37 PM</span>
+													<p class="name">VerifyMovementTestimonialsInSlider</p> 
+													<p class="duration text-sm">0h:0m:9s+442ms</p> 
+													<span class="datetime">18:57:08 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyAddProductToCart</h5>
-															<span class='badge badge-success'>05/22/2024 7:03:37 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:03:50 PM</span>
-															<span class='badge badge-default'>0h:0m:12s+160ms</span>
+															<h5 class="test-status text-pass">VerifyMovementTestimonialsInSlider</h5>
+															<span class='badge badge-success'>09/01/2024 6:57:08 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:57:18 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+442ms</span>
 														</div>
 																											</div>
 												</div>
@@ -193,7 +291,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:03:50</td>
+				<td>18:57:18</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -211,19 +309,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyDecreaseQuantityProductInOrder</p> 
-													<p class="duration text-sm">0h:0m:13s+786ms</p> 
-													<span class="datetime">19:03:50 PM</span>
+													<p class="name">VerifyProductsCountByClickOnBtnMoreProducts</p> 
+													<p class="duration text-sm">0h:0m:20s+216ms</p> 
+													<span class="datetime">18:57:18 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyDecreaseQuantityProductInOrder</h5>
-															<span class='badge badge-success'>05/22/2024 7:03:50 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:04:04 PM</span>
-															<span class='badge badge-default'>0h:0m:13s+786ms</span>
+															<h5 class="test-status text-pass">VerifyProductsCountByClickOnBtnMoreProducts</h5>
+															<span class='badge badge-success'>09/01/2024 6:57:18 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:57:38 PM</span>
+															<span class='badge badge-default'>0h:0m:20s+216ms</span>
 														</div>
 																											</div>
 												</div>
@@ -238,7 +336,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:04:04</td>
+				<td>18:57:38</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -256,19 +354,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyDeleteProductFromCart</p> 
-													<p class="duration text-sm">0h:0m:12s+882ms</p> 
-													<span class="datetime">19:04:04 PM</span>
+													<p class="name">VerifyRemoveFilters</p> 
+													<p class="duration text-sm">0h:0m:10s+058ms</p> 
+													<span class="datetime">18:57:38 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyDeleteProductFromCart</h5>
-															<span class='badge badge-success'>05/22/2024 7:04:04 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:04:17 PM</span>
-															<span class='badge badge-default'>0h:0m:12s+882ms</span>
+															<h5 class="test-status text-pass">VerifyRemoveFilters</h5>
+															<span class='badge badge-success'>09/01/2024 6:57:38 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:57:48 PM</span>
+															<span class='badge badge-default'>0h:0m:10s+058ms</span>
 														</div>
 																											</div>
 												</div>
@@ -283,7 +381,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:04:17</td>
+				<td>18:57:48</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -301,19 +399,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyIncreaseQuantityProductInOrder</p> 
-													<p class="duration text-sm">0h:0m:12s+224ms</p> 
-													<span class="datetime">19:04:17 PM</span>
+													<p class="name">VerifySelectCategory</p> 
+													<p class="duration text-sm">0h:0m:9s+391ms</p> 
+													<span class="datetime">18:57:49 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyIncreaseQuantityProductInOrder</h5>
-															<span class='badge badge-success'>05/22/2024 7:04:17 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:04:29 PM</span>
-															<span class='badge badge-default'>0h:0m:12s+224ms</span>
+															<h5 class="test-status text-pass">VerifySelectCategory</h5>
+															<span class='badge badge-success'>09/01/2024 6:57:49 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:57:58 PM</span>
+															<span class='badge badge-default'>0h:0m:9s+391ms</span>
 														</div>
 																											</div>
 												</div>
@@ -328,7 +426,7 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:04:29</td>
+				<td>18:57:58</td>
 				<td>
 Test ended with Pass, 
 <br>
@@ -346,19 +444,19 @@ Test ended with Pass,
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">VerifyPossibilityOfPostponingOrder</p> 
-													<p class="duration text-sm">0h:0m:14s+905ms</p> 
-													<span class="datetime">19:04:29 PM</span>
+													<p class="name">VerifySelectProductImage</p> 
+													<p class="duration text-sm">0h:0m:11s+388ms</p> 
+													<span class="datetime">18:57:58 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">VerifyPossibilityOfPostponingOrder</h5>
-															<span class='badge badge-success'>05/22/2024 7:04:29 PM</span>
-															<span class='badge badge-danger'>05/22/2024 7:04:44 PM</span>
-															<span class='badge badge-default'>0h:0m:14s+905ms</span>
+															<h5 class="test-status text-pass">VerifySelectProductImage</h5>
+															<span class='badge badge-success'>09/01/2024 6:57:58 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:58:10 PM</span>
+															<span class='badge badge-default'>0h:0m:11s+388ms</span>
 														</div>
 																											</div>
 												</div>
@@ -373,10 +471,64 @@ Test ended with Pass,
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>19:04:44</td>
+				<td>18:58:10</td>
 				<td>
 Test ended with Pass, 
 <br>
+<br>									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="fail" author="" device="" tag=""> 
+											<div class="status-avatar fail-bg">
+												<i class="fa fa-times text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">VerifySortProductsByPrice</p> 
+													<p class="duration text-sm">0h:0m:21s+768ms</p> 
+													<span class="datetime">18:58:10 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-fail">VerifySortProductsByPrice</h5>
+															<span class='badge badge-success'>09/01/2024 6:58:10 PM</span>
+															<span class='badge badge-danger'>09/01/2024 6:58:32 PM</span>
+															<span class='badge badge-default'>0h:0m:21s+768ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-times text-fail"></i></td>
+				<td>18:58:32</td>
+				<td>
+Test ended with Fail, 
+<br>   at OpenQA.Selenium.Support.UI.DefaultWait`1.ThrowTimeoutException(String exceptionMessage, Exception lastException)
+   at OpenQA.Selenium.Support.UI.DefaultWait`1.Until[TResult](Func`2 condition, CancellationToken token)
+   at OpenQA.Selenium.Support.UI.DefaultWait`1.Until[TResult](Func`2 condition)
+   at MakeupTesting.BasePage.WaitUntil(Func`2 func, Int32 seconds) in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTesting\BasePage.cs:line 53
+   at MakeupTestingPageObjects.DecorativeСosmeticsPage.SelectSortingByPrice() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTesting\DecorativeСosmeticsPage.cs:line 208
+   at MakeupTestingTests.DecorativeCosmeticsTests.VerifySortProductsByPrice() in E:\VisualStudio\RepVisualStudio\MakeupTesting\MakeupTestingTests\DecorativeCosmeticsTests.cs:line 86
+   at System.RuntimeMethodHandle.InvokeMethod(Object target, Void** arguments, Signature sig, Boolean isConstructor)
+   at System.Reflection.MethodBaseInvoker.InvokeWithNoArgs(Object obj, BindingFlags invokeAttr)
+<br>
+<br>OpenQA.Selenium.WebDriverTimeoutException : Timed out after 10 seconds
 <br>									</td>
 			</tr>
 	</tbody>
